--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head><title>Launch Learning App</title></head>
 <body>
-  <a href="learningapp://inclass">Open In-Class Scene</a>
+  <button onclick="window.location.href='learningapp://inclass'">Open In-Class Scene</button>
 </body>
 </html>
