--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head><title>Launch Learning App</title></head>
 <body>
-  <button onclick="window.location.href='learningapp://inclass'">Open In-Class Scene</button>
+  <a href="intent://inclass#Intent;scheme=learningapp;package=com.DefaultCompany.ATHOME;end;">Open App via Intent</a>
 </body>
 </html>
