--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head><title>Launch Learning App</title></head>
 <body>
-  <a href="intent://inclass#Intent;scheme=learningapp;package=com.DefaultCompany.ATHOME;end;">Open App via Intent</a>
+<a href="intent://inclass#Intent;scheme=learningapp;package=com.school.learningapp;end;">
+  Open In-Class Scene
+</a>
 </body>
 </html>
