--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 <head><title>Launch Learning App</title></head>
 <body>
-<a href="intent://inclass#Intent;scheme=learningapp;package=com.school.learningapp;end;">
-  Open In-Class Scene
-</a>
+  <button onclick="window.location.href='learningapp://inclass'">Open In-Class Scene</button>
 </body>
 </html>
