--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>Launch Learning App</title></head>
+<head><title>Test Deep Link</title></head>
 <body>
-  <button onclick="window.location.href='learningapp://inclass'">Open In-Class Scene</button>
+  <button onclick="window.location.href='learningapp://inclass'">
+    Launch In-Class App
+  </button>
 </body>
 </html>
