--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head><title>Test Deep Link</title></head>
-<body>
-  <button onclick="window.location.href='learningapp://inclass'">
-    Launch In-Class App
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Launch Learning App</title>
+</head>
+<body style="text-align:center; font-family:sans-serif; margin-top: 100px;">
+
+  <h2>Launch In-Class Scene</h2>
+  <p>Click the button below to open the app</p>
+
+  <button 
+    onclick="window.location.href='learningapp://inclass';" 
+    style="padding: 14px 24px; font-size: 18px; border-radius: 8px; cursor: pointer;">
+    🚀 Open Learning App
   </button>
+
 </body>
 </html>
