--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Launch Learning App</title>
+  <style>
+    .launch-btn {
+      display: inline-block;
+      padding: 14px 24px;
+      background-color: #4CAF50;
+      color: white;
+      font-size: 18px;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+    }
+  </style>
 </head>
-<body style="text-align:center; font-family:sans-serif; margin-top: 100px;">
+<body style="text-align:center; margin-top:100px; font-family:sans-serif;">
 
   <h2>Launch In-Class Scene</h2>
   <p>Click the button below to open the app</p>
 
-  <button 
-    onclick="window.location.href='learningapp://inclass';" 
-    style="padding: 14px 24px; font-size: 18px; border-radius: 8px; cursor: pointer;">
-    🚀 Open Learning App
-  </button>
+  <a href="learningapp://inclass" class="launch-btn">🚀 Open Learning App</a>
 
 </body>
 </html>
