--- a/index.html
+++ b/index.html
@@ -1,27 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Launch Learning App</title>
-  <style>
-    .launch-btn {
-      display: inline-block;
-      padding: 14px 24px;
-      background-color: #4CAF50;
-      color: white;
-      font-size: 18px;
-      border: none;
-      border-radius: 8px;
-      text-decoration: none;
-    }
-  </style>
-</head>
-<body style="text-align:center; margin-top:100px; font-family:sans-serif;">
-
-  <h2>Launch In-Class Scene</h2>
-  <p>Click the button below to open the app</p>
-
-  <a href="learningapp://inclass" class="launch-btn">🚀 Open Learning App</a>
-
+<html>
+<head><title>Launch Learning App</title></head>
+<body>
+  <a href="intent://inclass#Intent;scheme=learningapp;package=com.DefaultCompany.ATHOME;end;">Open App via Intent</a>
 </body>
 </html>
