--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
+<!DOCTYPE html>
 <html>
-<head><title>Launch Learning App</title></head>
+<head>
+    <title>Open App</title>
+    <script type="text/javascript">
+        function openApp() {
+            var appLink = 'learningapp://inclass';  // Your app's deep link scheme
+            var playStoreLink = 'https://play.google.com/store/apps/details?id=com.Alan3.MathleteShowdown'; // Play Store link
+            
+            // Try to open the app using the deep link
+            var iframe = document.createElement('iframe');
+            iframe.style.display = 'none';
+            iframe.src = appLink;
+            document.body.appendChild(iframe);
+            
+            // Redirect to the Play Store after 2 seconds if the app is not opened
+            setTimeout(function() {
+                window.location = playStoreLink;
+            }, 2000); // 2 seconds delay
+        }
+    </script>
+</head>
 <body>
-  <a href="intent://inclass#Intent;scheme=learningapp;package=com.DefaultCompany.ATHOME;end;">Open App via Intent</a>
+    <button onclick="openApp()">Open AT-HOME App</button>
 </body>
 </html>
